# type_adapt_example

./: CMakeLists.txt  README.md
include/type_adapt_example/: image_pointer_pub_type_adapt_intra_node.hpp  image_pointer_sub_type_adapt_intra_node.hpp
launch/: image_launch.py  image_pointer_launch.py
src/: image_pointer_pub_type_adapt_intra_node.cpp  image_pointer_sub_type_adapt_intra_node.cpp  image_pub_type_adapt_intra_node.cpp  image_sub_type_adapt_intra_node.cpp
